# strands-playground

./: .env.example  .gitignore  Makefile  README.md  TODO.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
credentials/: README.md
data/: texts_334.json
data/questions/: question_set.json
docs/: future_improvements.md  기존_프로젝트_RAG_프로세스.md  기존_프로젝트_히스토리_청크.md  향후_임베딩_인덱싱_개선.md
docs/milestones/: STEP_10.5_웹서치기능_계획.md  STEP_10.5_웹서치기능_완료.md  STEP_10.7_ragCLI구현_완료.md  STEP_10_LEVEL2질문_완료.md  STEP_11_Agent구체화_계획.md  STEP_1_환경설정_완료.md  STEP_2_CLI통합_완료.md  STEP_5_임베딩클라이언트_완료.md  STEP_6.1_쿼리개선기_계획.md  STEP_6.1_쿼리개선기_완료.md  STEP_6.2_전처리기_계획.md  STEP_6.2_전처리기_완료.md  STEP_6.3_쿼리빌더_계획.md  STEP_6.3_쿼리빌더_완료.md  STEP_6.4_결과필터_계획.md  STEP_6.4_결과필터_완료.md  STEP_6.5_청크확장기_계획.md  STEP_6.5_청크확장기_완료.md  STEP_6.6_컨텍스트빌더_계획.md  STEP_6.6_컨텍스트빌더_완료.md  STEP_6.7_프롬프트템플릿_계획.md  STEP_6.7_프롬프트템플릿_완료.md  STEP_6.8_파이프라인통합_계획.md  STEP_6.8_파이프라인통합_완료.md  STEP_6.9_테스트러너_계획.md  STEP_6.9_테스트러너_완료.md  STEP_6_RAG파이프라인_계획.md  STEP_7_Agent모드_계획.md  STEP_7_Agent모드_완료.md  STEP_8_비교평가_계획.md  (+5 more)
scripts/: generate_report.py  run_comparison.py  run_rag.py  test_agent.py  test_llm.py  test_opensearch.py  test_query_enhancer.py  test_tavily.py
src/: __init__.py  cost.py  embedding_client.py  gemini_client.py  llm_client.py  opensearch_client.py  service.py  types.py
tests/: conftest.py  test_chunk_expander.py  test_context_builder.py  test_opensearch_client.py  test_pipeline.py  test_preprocessor.py  test_prompt_template.py  test_query_builder.py  test_query_enhancer.py  test_result_filter.py
(+58 files in other folders)
